--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -6,7 +6,7 @@
         A curated list of recipes for the best homemade meal and delicacies.
       </p>
       <hr class="my-4" />
-      <%= link_to 'View Recipes', '', class: 'btn btn-lg custom-button' %>
+      <%= link_to 'View Recipes', recipes_path, class: 'btn btn-lg custom-button' %>
     </div>
   </div>
 </div>
